Fixing sizing title-values size on smaller devices
Removing sizes.ColumnWidth deprecated in styles earlier

--- a/style/title-values.css
+++ b/style/title-values.css
@@ -34,6 +34,6 @@ title-values {
 
 @container (max-width: 592px) {
     title-values {
-        --w: 100%
+        --w: 100% !important;
     }
 }
